Bug 149603 - MacOS Safari (Monterey) does not display LibreOffice HELP
Summary: MacOS Safari (Monterey) does not display LibreOffice HELP
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.2.7.2 release
Hardware: ARM macOS (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.3.5 target:7.4....
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-18 10:15 UTC by AlanJ
Modified: 2022-11-22 11:35 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description AlanJ 2022-06-18 10:15:13 UTC
Description:
LibreOffice Help not shown with Safari set as the default browser in MacOS Monterey on M1 chip.
The file:
///Users/username/Library/Application%20Support/LibreOffice/4/user/temp/lu18205pva.tmp/NewHelp0.html
can be opened with Chrome or Firefox, for example, but (even when manually opened)the result is just a blank window in Safari. 

Steps to Reproduce:
1. Safari set as default browser
2. Click on Menu-Bar Help or any Help button (e.g. in the CALC Function Wizard)


Actual Results:
Safari displays a blank window

Expected Results:
LibreOffice Help page displayed


Reproducible: Always


User Profile Reset: Yes



Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: SpreadsheetDocument
[Information guessed from browser]
OS: Mac OS X (12.4)
OS is 64bit: no (YES ACTUALLY!)
From LibreOffice - About LibreOffice (NOT Help - About LibreOffice):
Version: 7.3.4.2
Build: 728fec16bd5f605073805c3c9e7c4212a0120dc5
Environment: CPU threads: 8; OS: Mac OS X 12.4
User Interface: UI render: default; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-US
Misc: Calc: threaded
(ON M1 CHIP)
Comment 1 Commit Notification 2022-07-01 07:04:56 UTC
Christian Lohmaier committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/184a45c4176d96bf799a8f8a0fba290a8c851948

tdf#149603 macOS: fix workaround to use web help if Safari is the default browser

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2022-07-01 19:07:52 UTC
Christian Lohmaier committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/5460aadf5b8539f6dc5f0215e89d0feb6730ce6f

tdf#149603 macOS: fix workaround to use web help if Safari is the default browser

It will be available in 7.3.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-07-03 09:19:04 UTC
Christian Lohmaier committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/0db0e229fd2696ce9410576bdd2ba2e98cf4673d

tdf#149603 macOS: fix workaround to use web help if Safari is the default browser

It will be available in 7.4.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Christian Lohmaier 2022-11-22 11:35:44 UTC
this one is fixed, although looks like Ventura may need a completely different fix.