tdf#149603 macOS: fix workaround to use web help if Safari is the default browser

Safari won't access the local helpfiles from LO's app folder unless you
enable Safari's webdeveloper menu. The workaround broke since
f31f0038f5fd9254584a06665066faf9715d1cd8 switched from window to widget
references and hence using a different codepath, skipping the workaround
added in 44893662d510c4173e55ba27af02d0258a697a5d

Change-Id: I0c59066fe1cef1514c6595e0439d31d3e60e02f3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136685
Tested-by: Jenkins
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
(cherry picked from commit 184a45c4176d96bf799a8f8a0fba290a8c851948)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136705
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>